--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "yaml-cpp"]
 	path = yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp
+[submodule "pybind11"]
+	path = pybind11
+	url = https://github.com/pybind/pybind11
